--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,307 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Muli:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  font-size: 62.5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
+  width: 80%;
+  max-width: 150rem;
+  height: 80vh;
+  background-color: #36454F;
+  color: #eee;
+  border-radius: 0.5rem;
+  box-shadow: 0 1rem 5rem rgba(0, 0, 0, 0.7);
+  display: grid;
+  grid-template-columns: minmax(38%, 40rem) repeat(2, minmax(29%, 29rem));
+  grid-template-rows: repeat(10, 1fr);
+  grid-gap: 1rem;
+}
+
+.header {
+  grid-column: 1 / 2;
+  grid-row: 1 / 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header h1 {
+  font-family: "Muli", serif;
+  font-size: 4rem;
+  font-weight: 100%;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  color: whitesmoke;
+  text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
+}
+
+.balance {
+  grid-column: 1 / 1;
+  grid-row: 3 / -1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.balance h2 {
+  font-family: "Baloo Da 2", serif;
+  font-size: 4.5rem;
+  font-weight: 300;
+  text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
+}
+
+.balance h3 {
+  font-family: "Baloo Da 2", serif;
+  font-size: 4rem;
+  font-weight: 300;
+  text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
+}
+
+.income-expenditure {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 5rem;
+  font-family: "Muli", serif;
+  text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
+  text-align: center;
+}
+
+.plus,
+.minus {
+  margin: 0 2rem;
+}
+
+.plus {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.minus {
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.income-expenditure h3 {
+  font-size: 2.5rem;
+  font-weight: 300;
+  margin-bottom: 2rem;
+  width: 100%;
+}
+
+.income-expenditure p {
+  font-size: 3rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+.form-wrapper {
+  grid-column: 2 / -1;
+  grid-row: 2 / 4;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.income {
+  grid-column: 1 / 2;
+  grid-row: 1 / -1;
+}
+
+.expenditure {
+  grid-column: 2 / -1;
+  grid-row: 1 / -1;
+}
+
+.input-group input:not([type="submit"]) {
+  width: 30rem;
+  margin-bottom: 2.5rem;
+  border: none;
+  background: transparent;
+  border-bottom: 0.2rem solid #777;
+  padding: 0.5rem 0.5rem 0.5rem 0;
+  font-family: "Baloo Da 2", serif;
+  font-size: 1.8rem;
+  color: #eee;
+  outline: none;
+  transition: border-bottom 0.4s;
+}
+
+.income input:not([type="submit"]):focus {
+  border-bottom: 0.2rem solid #36454F;
+}
+
+.expense input:not([type="submit"]):focus {
+  border-bottom: 0.2rem solid #36454F;
+}
+
+.input-group input[type="submit"] {
+  width: 10rem;
+  padding: 0.7rem;
+  border: none;
+  outline: none;
+  border-radius: 0.7rem;
+  font-family: "Muli", serif;
+  font-size: 1.6rem;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  color: #eee;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  margin-top: 1rem;
+  text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
+}
+
+.input-group input[type="submit"]:active {
+  transform: translateY(0.3rem);
+}
+
+/* Add Income Button */
+.income input[type="Submit"] {
+  background-color: #36454F;
+  width: 150px;
+  
+}
+
+/* Add Expenditure Button */
+.expenditure input[type="Submit"] {
+  background-color: #36454F;
+  width: 150px;
+}
+
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.transactions {
+  margin-top: 3rem;
+  padding: -20%;
+}
+
+.transactions h2 {
+  font-family: "Baloo da 2", serif;
+  font-size: 2.5rem;
+  letter-spacing: 0.1rem;
+  font-weight: 300;
+  margin-bottom: 2rem;
+}
+
+.transactions-income {
+  grid-column: 2 / 3;
+  grid-row: 5 / -1;
+}
+
+.transactions-expenditure {
+  grid-column: 3 / -1;
+  grid-row: 5 / -1;
+}
+
+.transaction-list {
+  width: 92%;
+  max-height: 35rem;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #aaa;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #444;
+  border-radius: 10px;
+}
+
+.transaction {
+  list-style: none;
+  font-family: "Baloo da 2", serif;
+  font-size: 1.8rem;
+  letter-spacing: 0.1rem;
+  margin-bottom: 1.5rem;
+  color: #fff;
+  padding: 0.4rem 0.4rem 0.4rem 0.4rem;
+  border-radius: 0.3rem;
+  width: 32rem;
+  display: flex;
+  justify-content: center;
+  /* box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); */
+}
+
+/* Transaction History */
+.transactions-income .transaction {
+  background-color: #36454F;
+}
+
+.transactions-expenditure .transaction {
+  background-color: #36454F;
+}
+
+.transaction-text {
+  width: 23rem;
+}
+
+.transaction-amount {
+  transform: translateX(3rem);
+}
+
+.delete-btn {
+  transform: translateX(4rem);
+  border: none;
+  background-color: transparent;
+  font-size: 2rem;
+  margin: 0 1rem;
+  color: white;
+  text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  outline: none;
+}
+
+
+
+/*---------media query for menu--------*/
+@media only screen and (max-width: 800px){
+	.container{
+		position:absolute;
+		margin-top: 100%;
+		background: #333;
+		width: 5%;
+		overflow: hidden;
+    font-size: smaller;
+	}
+
+  .card {
+    display: flex;
+    position: relative;
+    margin: 50%;
+    padding: 250%;
+    text-align: center;
+    font-size: x-small;
   }
 }
