--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ html {
 }
 
 .header {
+  margin-bottom: 3rem;
   grid-column: 1 / 2;
   grid-row: 1 / 4;
   display: flex;
@@ -56,7 +57,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
+  margin-top: -0.2rem;
   text-align: center;
 }
 
@@ -77,7 +78,7 @@ html {
 .income-expenditure {
   display: flex;
   justify-content: space-around;
-  margin-top: 5rem;
+  margin-top: 3rem;
   font-family: "Muli", serif;
   text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
   text-align: center;
@@ -118,6 +119,7 @@ html {
 }
 
 .input-group {
+  margin: 3rem;
   display: flex;
   flex-direction: column;
 }
@@ -193,8 +195,8 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .transactions {
-  margin-top: 3rem;
-  padding: -20%;
+  margin-top: 0.3rem;
+
 }
 
 .transactions h2 {
@@ -242,16 +244,17 @@ input[type="number"]::-webkit-inner-spin-button {
 .transaction {
   list-style: none;
   font-family: "Baloo da 2", serif;
+  position: relative;
   font-size: 1.8rem;
   letter-spacing: 0.1rem;
   margin-bottom: 1.5rem;
   color: #fff;
   padding: 0.4rem 0.4rem 0.4rem 0.4rem;
   border-radius: 0.3rem;
-  width: 32rem;
+  width: 25rem;
   display: flex;
   justify-content: center;
-  /* box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); */
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
 /* Transaction History */
